Got Sinatra working, linked CSS, started styling

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,2 @@
-	<h1>Welcome To Lightsabers 'R Us!</h1>
-	<h2>No matter who your opponent, we have sabers for all foes! Are you shopping for the Light or Dark side today?</h2>​
+	<h1>Welcome To Lightsabers R Us!</h1>
+	<h2>No matter who your opponent, we have sabers for all foes! Are you shopping for the <em>Light</em> or <em>Dark</em> side today?</h2>​
