--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,18 +3,19 @@
 ​
 <head>
 	<title>
-​	Lightsabers 'R Us
+​	Lightsabers R Us
 	</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	
-​<%= yield %>
+
+​<%=yield %>
 
 	
 ​
 ​
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"> </script>
-<script src="js.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="script.js"></script>
 ​
 </body>
 </html>
