--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,9 @@
-	<h1>Welcome To Lightsabers R Us!</h1>
-	<h2>No matter who your opponent, we have sabers for all foes! Are you shopping for the <em>Light</em> or <em>Dark</em> side today?</h2>​
+	<div id="header">
+
+		<h1>Welcome To Lightsabers R Us!</h1>
+		<h2>Are you shopping for the <em>Light</em> or <em>Dark</em> side today?</h2>​
+	</div>
+
+	<img class ="banner_image"src="images/crossedsabers.jpeg">
+	<img id ="yoda" src="images/yodahomepage.jpeg">
+	<img id="vader" src="images/vaderheadshot.jpeg"
