--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,18 @@
-	<div id="header">
+	
 
 		<h1>Welcome To Lightsabers R Us!</h1>
-		<h2>Are you shopping for the <em>Light</em> or <em>Dark</em> side today?</h2>​
-	</div>
 
-	<img class ="banner_image"src="images/crossedsabers.jpeg">
-	<img id ="yoda" src="images/yodahomepage.jpeg">
-	<img id="vader" src="images/vaderheadshot.jpeg"
+
+		<h2 id="light">Are you shopping for
+		</h2>
+			the <em>Light Side</em>?
+		</h2>
+
+		<h2 id="dark">Or the <em>Dark side?</em> 
+		</h2>​
+
+	<div id="header">
+		<img class ="banner_image"src="images/crossedsabers.jpeg">
+		<img id ="yoda" src="images/yodahomepage.jpeg">
+		<img id="vader" src="images/vaderheadshot.jpeg">
+	</div>
