--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,16 +6,12 @@
 ​	Lightsabers R Us
 	</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="script.js"></script>
 </head>
 <body>
 
-​<%=yield %>
+​<%=yield %> 
 
-	
-​
-​
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="script.js"></script>
-​
 </body>
 </html>
