--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,18 @@
 	
 
-		<h1>Welcome To Lightsabers R Us!</h1>
+	<h1>Welcome To Lightsabers R Us!</h1>
 
 
-		<h2 id="light">Are you shopping for
-		</h2>
-			the <em>Light Side</em>?
-		</h2>
+	<h2>Are you shopping for
+	</h2>
+	<h3 id="light">
+		The <em>Light Side</em>?
+	</h3>
 
-		<h2 id="dark">Or the <em>Dark side?</em> 
-		</h2>​
+	<h3 id="mid">Or</h3>
+
+	<h3 id="dark">The <em>Dark side?</em> 
+	</h3>​
 
 	<div id="header">
 		<img class ="banner_image"src="images/crossedsabers.jpeg">
