--- a/views/index.erb
+++ b/views/index.erb
@@ -6,13 +6,13 @@
 	<h2>Are you shopping for
 	</h2>
 	<h3 id="light">
-		The <em>Light Side</em>?
+		<a class="yodalink"href="light_side">The <em>Light Side</em>?</a>
 	</h3>
 
 	<h3 id="mid">Or</h3>
 
-	<h3 id="dark">The <em>Dark side?</em> 
-	</h3>​
+	<h3 id="dark"><a class="vaderLink"href="dark_side">The <em>Dark side?</em> 
+	</a></h3>​
 
 	<div id="header">
 		<img class ="banner_image"src="images/crossedsabers.jpeg">
