added audio file to home page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,8 @@
 	
+<audio controls autoplay loop>
+  <source src="swt.mp3" type="audio/mpeg">
 
+</audio>
 	<h1>Welcome To Lightsabers R Us!</h1>
 
 
