resize images and added mp3 file

--- a/public/styles.css
+++ b/public/styles.css
@@ -70,3 +70,11 @@ audio {
 /*    transform: translate(0%, 50%);*/
 /*    margin-right: -13px;*/
 }
+
+#darkimg img{
+	width: 500px;
+	height: 500px;
+	
+}
+
+
