--- a/views/dark_side.erb
+++ b/views/dark_side.erb
@@ -1,3 +1,12 @@
+<audio controls autoplay>
+  <source src="darkside.mp3" type="audio/mpeg">
+  </audio>
+
 <h1>
 Welcome to the Dark Side.
 </h1>
+
+<div id="darkimg">
+	<img src="images/darklight1.png">
+	<img src="images/darklight2.jpeg">
+	</div>
