--- a/views/dark_side.erb
+++ b/views/dark_side.erb
@@ -8,5 +8,7 @@ Welcome to the Dark Side.
 
 <div id="darkimg">
 	<img src="images/darklight1.png">
+</div>
+	<div id="darkimg1">
 	<img src="images/darklight2.jpeg">
-	</div>
+</div>
