--- a/views/light_side.erb
+++ b/views/light_side.erb
@@ -1,3 +1,12 @@
-<h1>
+<h1 class="lightheader">
 Welcome to the Light Side.
-</h1>
+</h1 class="lightheader">
+
+
+<div class="leftSaber">
+	<img src="images/greensaber.jpeg">
+</div>
+
+<div class="middlesaber">
+	<img src="images/yellowsaber.jpeg">
+</div>
