--- a/views/dark_side.erb
+++ b/views/dark_side.erb
@@ -1,14 +1,32 @@
-<audio controls autoplay>
-  <source src="darkside.mp3" type="audio/mpeg">
-  </audio>
+<div class="bkimg">
+	<audio controls autoplay>
+  		<source src="darkside.mp3" type="audio/mpeg">
+ 	</audio>
 
-<h1>
-Welcome to the Dark Side.
-</h1>
+	<h1>
+		Welcome to the Dark Side.
+	</h1>
 
-<div id="darkimg">
-	<img src="images/darklight1.png">
-</div>
+	<div id="darkimg">
+		<img src="images/darklight1.png" >
+		<p>THE CLASSIC</p>
+		<div class="quantity"><br>
+			Quantity:<br><form>
+  			<input type="text" quantity="number" value="number">
+  			<input type="submit" value="Submit">
+				</form>
+		 </div>
+	</div>
+
+
 	<div id="darkimg1">
-	<img src="images/darklight2.jpeg">
+		<img src="images/darklight2.jpeg">
+		<p>THE NEW EMPIRE</p>
+			<div class="quantity"><br>
+				Quantity:<br><form>
+  				<input type="text" quantity="number" value="number">
+  				<input type="submit" value="Submit">
+				</form> 
+			</div>
+	</div>
 </div>
