--- a/public/styles.css
+++ b/public/styles.css
@@ -105,7 +105,6 @@ img{
 }
 
 .bkimg {
-	background-image: url("images/LV.jpg");
 	z-index: 0;
 	width: 100%;
 }
@@ -113,5 +112,11 @@ p {
 	font-family: "condensed light";
 	font-size: 25px;
 	text-shadow: 2px 2px #FF0000;
+}
+h3 {
+	font-size: 75px;
+	text-shadow: 2px 2px #ff0000;
+	font-family: "condensed light";
+	text-align: center;
 }
 
