added Jon's checkout changes

--- a/public/styles.css
+++ b/public/styles.css
@@ -31,7 +31,8 @@ h2{
     padding-top: 9px;
 }
 .lightheader{
-	margin-top: 3px;	
+	margin-top: 3px;
+	text-shadow: 2px 2px #66ff00;
 }
 #light{
     color: #00ff00;
@@ -75,13 +76,57 @@ h2{
 
 
 /*Lightside styling begins here*/
-
+.light_image_wrap{
+	margin-left: 25px;
+	margin-right: 25px;
+	width:1040px;
+	margin:0 auto;
+}
+form{
+	text-align: center;
+	width:150px;
+	margin: 0 auto;
+}
+label.name{
+	display:block;
+}
+label.message{
+	display:block;
+}
+.leftSaber img{
+	height:300px;
+	width:300px;
+	vertical-align: middle;
+}
 .leftSaber{
-height:500px;
-width:500px;	
+	float:left;
+	width:300px;
+	display:block;s
+}
+.middleSaber img{
+	height: 300px;
+	width:300px;
+	vertical-align: middle;
+	margin-left: 80px;
 }
 .middleSaber{
-	height: 500px;
-	width:500px;
+	float:left;
+	width:300px;
+	display:block;
+	margin-left:65px;
 }
-
+.rightSaber img{
+	height:300px;
+	width:300px;
+	vertical-align: middle;
+}
+.rightSaber{
+	float:right;
+	width:300px;
+	display:block;
+}
+.change{
+	clear:both;
+	margin-top: 25px;
+	text-align: center;
+}
