finalized changes to checkout page on dylans end

--- a/views/checkout.erb
+++ b/views/checkout.erb
@@ -1,28 +1,39 @@
-<div class="background-image">
- +	<img src="images/checkout.jpg">
- +</div>
- +
- +<form><div class="image">
- +  First name:<br>
- +  <input type="text" name="firstname">
- +  <br>
- +  Last name:<br>
- +  <input type="text" name="lastname">
- +  <br>
- +  Address:<br>
- +  <input type="text" name="address">
- +  <br>
- +  City<br>
- +  <input type="text" name="city">
- +  <br>
- +  State <br>
- +  <input type="text" name="state">
- +  <br>
- +  Zip Code<br>
- +  <input type="text" name="Zip">
- +  <br>
- +</form></div>
- +
- +
- +
- +</form>
+ <div class="background-image">
+ 	<img src="images/medals.jpeg">
+ </div>
+ <div id="banner">
+ 	<h1>Thanks for shopping with us!</h1>
+ <form>
+ 	<div class="image">
+	   First name:
+	   <br>
+	   <input type="text" name="firstname">
+	   <br>
+	   Last name:
+	   <br>
+	   <input type="text" name="lastname">
+	   <br>
+	   Address:
+	   <br>
+	   <input type="text" name="address">
+	   <br>
+	   City
+	   <br>
+	   <input type="text" name="city">
+	   <br>
+	   State
+	   <br>
+	   <input type="text" name="state">
+	   <br>
+	   Zip Code
+	   <br>
+	   <input type="text" name="Zip">
+	   <br>
+   </div>
+ </form>
+ 	<p class="footer">
+ 		Fill out these forms, and the lightsaber will find you. Don't worry about a submit button- the Force will carry your information to us, if you are strong enough.
+ 	</p>
+ 
+ 
+ </form>
