--- a/public/styles.css
+++ b/public/styles.css
@@ -130,3 +130,13 @@ label.message{
 	margin-top: 25px;
 	text-align: center;
 }
+
+/*Checkout styling begins here*/
+.background-image{
+	width:100%;
+	height:300px;
+}
+.footer{
+	color:white;
+	text-align: center;
+}
