fixed styling, downloading audio and imgs next

--- a/views/dark_side.erb
+++ b/views/dark_side.erb
@@ -1,3 +1,34 @@
-<h1>
-Welcome to the Dark Side.
-</h1>
+<div class="bkimg">
+	<div class="darkaudio">
+		<audio controls autoplay>
+	  		<source src="darkside.mp3" type="audio/mpeg">
+	 	</audio>
+ 	</div>
+
+	<h3 class="darkhead">
+		Welcome to the Dark Side.
+	</h3>
+
+	<div id="darkimg">
+		<img src="images/darklight1.png" >
+		<p class="darkP">THE CLASSIC</p>
+		<div class="quantity"><br>
+			Quantity:<br><form>
+  			<input type="text" quantity="number" value="number">
+  			<input type="submit" value="Submit">
+				</form>
+		 </div>
+	</div>
+
+
+	<div id="darkimg1">
+		<img src="images/darklight2.jpeg">
+		<p class="darkP">THE NEW EMPIRE</p>
+			<div class="quantity"><br>
+				Quantity:<br><form>
+  				<input type="text" quantity="number" value="number">
+  				<input type="submit" value="Submit">
+				</form> 
+			</div>
+	</div>
+</div>
