--- a/views/light_side.erb
+++ b/views/light_side.erb
@@ -59,6 +59,6 @@ Welcome to the Light Side.
 		<p>
 			Changed your mind?
 		</p> 
-		<p>Click <a href="index.erb">Here</a> for the opportunity to make your choice again.
+		<p>Click <a href="/">Here</a> for the opportunity to make your choice again.
 		</p>
 	</div>
