--- a/public/styles.css
+++ b/public/styles.css
@@ -130,6 +130,48 @@ label.message{
 	margin-top: 25px;
 	text-align: center;
 }
+/*darkside css*/
+
+#darkimg {
+	float: left;
+	z-index: 1;
+}
+#darkimg img{
+	width: 500px;
+	height: 500px;
+	display: inline-block;
+	margin: 5px;
+	z-index: 1;
+}
+
+#darkimg1 {
+	float: right;
+}
+
+.quantity {
+	margin-bottom: -300px;
+	clear: both;
+}
+
+.bkimg {
+	margin-top: 20px;
+	z-index: 0;
+	width: 100%;
+}
+.darkP {
+	font-family: "condensed light";
+	font-size: 25px;
+	text-shadow: 2px 2px #FF0000;
+}
+.darkhead {
+	font-size: 75px;
+	text-shadow: 2px 2px #ff0000;
+	font-family: "condensed light";
+	text-align: center;
+}
+.darkaudio{
+	display:none;
+}
 
 /*Checkout styling begins here*/
 .background-image{
