--- a/views/dark_side.erb
+++ b/views/dark_side.erb
@@ -12,11 +12,14 @@
 	<div id="darkimg">
 		<img src="images/darklight1.png" >
 		<p class="darkP">THE CLASSIC</p>
-		<div class="quantity"><br>
-			Quantity:<br><form>
-  			<input type="text" quantity="number" value="number">
-  			<input type="submit" value="Submit">
-				</form>
+		<div class="quantity">
+			<br>
+				Quantity:
+			<br>
+			<form method="get" action="/checkout">
+	  			<input type="text" quantity="number" value="number">
+	  			<input type="submit" value="Submit">
+			</form>
 		 </div>
 	</div>
 
@@ -24,10 +27,13 @@
 	<div id="darkimg1">
 		<img src="images/darklight2.jpeg">
 		<p class="darkP">THE NEW EMPIRE</p>
-			<div class="quantity"><br>
-				Quantity:<br><form>
-  				<input type="text" quantity="number" value="number">
-  				<input type="submit" value="Submit">
+			<div class="quantity">
+				<br>
+					Quantity:
+				<br>
+				<form method="get" action="/checkout">
+	  				<input type="text" quantity="number" value="number">
+	  				<input type="submit" value="Submit">
 				</form> 
 			</div>
 	</div>
