--- a/views/checkout.erb
+++ b/views/checkout.erb
@@ -4,7 +4,7 @@
  </div>
  <div id="banner">
  	<h1>Thanks for shopping with us!</h1>
- <form>
+ <form class="form">
  	<div class="image">
 	   First name:
 	   <br>
